--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
     <meta name="description" content="Interactive detective-style portfolio showcasing Garvdeep Singh's web development skills and projects" />
     <meta name="author" content="Garvdeep Singh" />
 
-    <meta property="og:title" content="32a035d7-f72b-4c13-9e6f-c19d42937d1f" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Garvdeep Singh | Detective Portfolio" />
+    <meta property="og:description" content="Interactive detective-style portfolio showcasing Garvdeep Singh's web development skills, projects, and achievements." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://garvdeep.vercel.app/preview.png" />
+    <meta property="og:url" content="https://garvdeep.vercel.app/" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:card" content="shttps://garvdeep.vercel.app/preview.png" />
+    <meta name="twitter:site" content="@garvdeep_singh" />
+    <!-- <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" /> -->
   </head>
 
   <body>
