Icon change left

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- <link rel="icon" href="%PUBLIC_URL%/faviicon.ico" /> -->
+     <link rel="icon" type="image/png" href="/favicon.png" />
     <title>The Case of Garvdeep Singh - Detective Portfolio</title>
     <meta name="description" content="Interactive detective-style portfolio showcasing Garvdeep Singh's web development skills and projects" />
     <meta name="author" content="Garvdeep Singh" />
